--- a/style.css
+++ b/style.css
@@ -24,16 +24,18 @@ header {
   font-size: 3em;
   margin-bottom: 0;
 }
-.game-area {
+
+main{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.game-area {
   width: 700px;
   height: 500px;
   background-color: rgb(29, 26, 26);
   background: rgba(0,0,0,0.5);
   position: relative;
-  margin-left: 25vw;
   margin-top: 1vh;
 }
 
@@ -42,15 +44,17 @@ header {
   height: 100px;
   top: 100px;
   position: absolute;
-  background-color: black;
+  background-color: #fff;
 }
 
 .player-paddle {
+  top: 40%;
   left: 0;
   border-right: 10px solid chartreuse;
 }
 
 .computer-paddle {
+  top: 40%;
   right: 0;
   border-left: 10px solid #fd01b0;
 }
@@ -75,6 +79,20 @@ header {
   margin-top: 30px;
 }
 
+.player_1_title{
+  color: chartreuse;
+  font-size: 2.5em;
+  margin-top: 0;
+  margin-right: 1em;
+}
+
+.player_2_title{
+  color: #fd01b0;
+  font-size: 2.5em;
+  margin-top: 0;
+  margin-left: 1em;
+}
+
 .net {
   position: relative;
   background-color: chartreuse;
@@ -84,12 +102,15 @@ header {
 }
 
 .ball {
-  width: 20px;
-  height: 20px;
-  background-color: #fd01b0;
+  width: 19px;
+  height: 19px;
+  border-radius: 10px;
+  border: #fd01b0 1px solid;
+  background-color: #FFF6FE;
   position: absolute;
-  top: 0;
-  left: 0;
+  display: none;
+  top: 60%;
+  left: 48.5%;
 }
 
 .start-btn{
