--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(images/game_bg.jpg);
+  background-image: url(ping-pong/images/game_bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
